--- a/index.html
+++ b/index.html
@@ -1,12 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-</head>
-<body>
-    
-</body>
+  </head>
+  <body>
+    <h2>Titulo del proyecto</h2>
+    <p>
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora
+      necessitatibus fuga hic ab? Animi quo reprehenderit necessitatibus non
+      voluptatum nobis labore, deserunt suscipit eveniet odio saepe inventore
+      assumenda, quisquam illum?
+    </p>
+  </body>
 </html>
