Cambio de color y html

--- a/SantiagoFonseca.html
+++ b/SantiagoFonseca.html
@@ -27,5 +27,7 @@
       voluptatum nobis labore, deserunt suscipit eveniet odio saepe inventore
       assumenda, quisquam illum?
     </p>
+
+    <h2>Santiago Miguel Fonseca Yicon</h2>
   </body>
 </html>
